--- a/hellojava/Jenkinsfile
+++ b/hellojava/Jenkinsfile
@@ -14,7 +14,7 @@ pipeline {
         }
         stage('Clean') {
             steps {
-                dir("${env.WORKSPACE}"){
+                dir("${env.WORKSPACE/hellojava}"){
                     echo "Cleaning the workspace..."
                     sh 'mvn clean'
                 }
