--- a/hellojava/Jenkinsfile
+++ b/hellojava/Jenkinsfile
@@ -15,6 +15,7 @@ pipeline {
         stage('Clean') {
             steps {
                 dir("${env.WORKSPACE/hellojava}"){
+                    echo ${env.WORKSPACE}
                     echo "Cleaning the workspace..."
                     sh 'mvn clean'
                 }
